# datazip

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  benchmarks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs-to_gh-pages.yml  tox-pytest.yml
api/datazip/: index.html
api/mixin/: index.html
docs/: benchmarks.py  index.md  installation.md  performance.md  quickstart.md  user-guide.md
docs/api/: datazip.md  mixin.md  types.md
installation/: index.html
performance/: index.html
quickstart/: index.html
search/: search_index.json
src/datazip/: __init__.py  _optional.py  _test_classes.py  _types.py  _utils.py  core.py  mixin.py
tests/: conftest.py  smoke_test.py
tests/unit/: datazip_test.py
user-guide/: index.html
